observations.txt
1. HelloWorld.java
	NO errors

2. pgm1.java

pgm1.java:1: error: class HelloWorld is public, should be declared in a file named HelloWorld.java
public class HelloWorld{
       ^
1 error

3. pgm2.java

Error: Main method not found in class pgm2, please define the main method as:
   public static void main(String[] args)
or a JavaFX application class must extend javafx.application.Application

4. pgm3.java

pgm3.java:2:error: <identifier> expected
public static void main (int){
	                            ^
	1 error

5. pgm4.java

pgm4.java:3: error: unclosed character literal
		System.out.println('HELLO WORLD');
		                   ^
pgm4.java:3: error: ';' expected
		System.out.println('HELLO WORLD');
		                     ^
pgm4.java:3: error: unclosed character literal
		System.out.println('HELLO WORLD');
		                               ^
pgm4.java:3: error: not a statement
		System.out.println('HELLO WORLD');
		                          ^
4 errors

6. pgm5.java

pgm5.java:3: error: ';' expected
		System.out.println("HELLO WORLD")
		                                 ^
1 error

7. pgm6.java

pgm6.java:3: error: ')' expected
		System.out.println("HELLO WORLD";
		                                ^
1 error

8. pgm7.java

pgm7.java:3: error: ')' expected
		System.out.println(HELLO WORLD);
		                        ^
pgm7.java:3: error: illegal start of expression
		System.out.println(HELLO WORLD);
		                              ^
2 errors


